# ICOlyzer

./: .flake8  ICOanalyzer.py  ICOconverter.py  ICOplotter.py  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt
.github/actions/check-and-test/: action.yaml
.github/workflows/: tests.yaml
Releases/: 1.0.0.md  1.1.0.md  1.3.0.md  1.4.0.md  1.5.0.md  1.6.0.md  1.7.0.md  1.8.0.md  Release.md
Test/: analyzer.t  plotter.t  setup.sh
examples/: broken.hdf5  log-x.hdf5  log-xy.hdf5  log-xyz.hdf5  log-xz.hdf5  log-y.hdf5  log-yz.hdf5  log-z.hdf5  loss.hdf5
icolyzer/: analyzer.py  cli.py  converter.py  iftlibrary.py  libift.dylib  plotter.py
icolyzer/iftlibrary/: __init__.py  ift.py
icolyzer/iftlibrary/lib/: libift.dylib
icotools/: ICOanalyzer.py  ICOconverter.py  ICOplotter.py  analyzer.py  cli.py  converter.py  iftlibrary.py  plotter.py
