[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Clemens Burgstaller", email = "burgstaller@ift.at"},
    {name = "Norbert Leder", email = "norbert.leder@mytoolit.com"},
    {name = "René Schwaiger", email = "rene.schwaiger@ift.at"},
    {name = "Thomas Hirschbüchler", email = "hirschbuechler@ift.at"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
]
dependencies = [
  "matplotlib>=3.5.1",
  "numpy>=1.20",
  "pandas>=1.3.5",
  "tables>=3.10.1,<4",
  "openpyxl",
  "rich>=13.4.1",
]
description = """Auxiliary set of tools to work with measurement data produced \
                 by the ICOtronic system"""
keywords = [
    "smart-tool",
    "smh",
    "stu",
    "sth",
    "tool-holder",
]
name = "icolyzer"
readme = "README.md"
requires-python = ">=3.10"
version = "1.8.0"

[project.optional-dependencies]
dev = [
    "flake8",
    "mypy",
    "pylint>=3.0.2",
    "toml",
]
test = [
    "prysk[pytest-plugin]>=0.13.1",
    "pytest",
]

[project.scripts]
icoanalyzer = "icolyzer.analyzer:main"
icoconverter = "icolyzer.converter:main"
icoplotter = "icolyzer.plotter:main"

[project.urls]
Source = "https://github.com/mytoolit/ICOlyzer/"

[tool.black]
line-length = 79
preview = true

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
# Use doctests
# Fail after first errors
# Ignore macOS metadata files
addopts = "--doctest-modules -x --ignore-glob='*._*.py'"
minversion = "6.0"

[tool.setuptools.packages.find]
include = ["icolyzer*"]

[tool.setuptools.package-data]
"icolyzer.iftlibrary.lib" = ["*.dll", "*.dylib","*.so"]

[tool.yapfignore]
# Ignore macOS metadata files
ignore_patterns = [ "*._*.py" ]
